[build-system]
requires      = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name            = "enciphers"
version         = "0.1.0"
description     = "Fast encryption library with Rust-powered Python bindings"
readme          = "README.md"
license         = { text = "Apache-2.0" }
authors         = [{ name = "Mejlad Alsubaie" }]
keywords        = ["encryption", "cipher", "rust", "fast", "security"]
requires-python = ">=3.11"
dependencies    = ["orjson"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]

[tool.maturin]
features      = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
